client-web/src/css/index.css
/* ... */
.data_small {
  font:var(--font-data-small);
}

.label_small {
  font:var(--font-label-small);
  color: var(--color-label);
  text-transform: uppercase;
}

.label_dark {
  color:var( --color-label-dark);
}

.light_level {
  font:var(  --font-small);
  color:var(--color-light-level);
}

.loading {
  font:var(--light) 16px 'Roboto', sans-serif;
  color:var(--color-label);

}

.announce {
  font:var(--font-announce);
  text-transform: uppercase;
}

.emphasis {
  font-style: italic;
}

.page_title {
  font: var(--font-page-alert);
}

.list_subtitle {
  font:var(--font-list-subtitle);
  text-transform: uppercase;
  color:#BFBFBF;
}


.nivo_tooltip {
  background-color: #FFFFFF;
  color: #333333;
  font:var(--font-tooltip);
  border: 1px solid #33333333;
}

.tooltip_color_swatch {
  width: 12px;
  height: 12px;
  border-radius: var(--radius-border);
}

/************* end text styles ********************/

/************* core layout css ********************/

.page_containter {
  /*max-width: var(--page-max-width);*/
  width:100%;
}

.page_content {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

/************ activity detail ****************/

.activity_map_name{
  font:var(--font-activity-map-name);
}

.activity_mode_name {
  font:var(--font-activity-mode-name);
  text-transform: uppercase;
}

.activity_completion_reason {
  font:var(--font-activity-completion-reason);
  text-transform:uppercase;
}

.activity_score_box {
  width: 60px;
  height: 30px;
  border: var(--border-regular);
  font: var(--font-activity-score-box);
  display: flex;
  justify-content: center;
  align-items: center;
}

/************ main navigation ****************/

.nav {
  font:var(--font-main-nav);
  text-transform: uppercase;
  cursor: pointer;
  transition: opacity .5s ease-in-out;
}

.nav:hover {
  text-decoration: underline;
}

.nav_active {
  opacity:1;
}

.nav_inactive {
  opacity: 0.5;
}

.nav_transition {
  transition: top .4s ease-in-out;
}

.page_nav_transition {
  transition: left .4s ease-in-out;
}

.page_nav_icon {
  color:#ffffffbb;
}
.page_nav_icon:hover {
  cursor: pointer;
  color:#ffffff;
}

.page_nav_icon:active {
  translate: 0px 1px;
}

/******** form elements for nav **********/
.nav_button {
  font:var(--font-controls);
  background: #FFFFFF00;
  color:white;
  border:1px solid white;
  cursor: pointer;
  border-radius: 6px;
  padding: 1px 10px;
  margin-left: 10px;
  width:70px;
}


.nav_select {
  background: #00000000;
  color:white;
  direction:ltr;
}

.nav_select, .nav_option {
  font:var(--font-controls);
  border:0px;
  /*text-align-last: right;*/
}

.nav_select_left {
  direction:rtl;
}

.nav_option {
  color:var(--color-base-font-dark);
  /* right align options */
  direction: ltr;
  
}

/***************** player activity overview layout ****************/


/************* end core layout css ********************/


hr {
  border: none;
  height: 1px;
  width: 100%;
  /*margin-left: 0px;*/
  background-color: #888;
}

.player_name_small {
  font:var(--font-player-name-small);
}

.player_name_code_small {
  font:var(--font-player-name-code-small);
  color:var(--color-player-name-code);
}

.player_name_large {
  font:var(--font-player-name-large);
}

.player_name_code_large {
  font:var(--font-player-name-code-large);
  color:var(--color-player-name-code);
}

.player_name {
  font:var(--font-player-name);
}

.player_name_code {
  color:var(--color-player-name-code);
}

.underline {
  border-bottom: 1px solid var(--color-label);
}

/* start here / fix subtitle underlines */

.link {
  text-decoration: underline;
}

.link:hover {
  text-decoration: none;
}

a {
  color: var(--color-link);
  text-decoration-color: #fbfbfb66;
}

a:hover {
  text-decoration-color: #fbfbfb;
}

/* todo replace this with a component */
.weapon_list_icon{
  width: 64px;
  height: 64px;
  border-radius: var(--radius-border);
  border-color:#00000000;
  
  background-size: cover;
  padding: 0px;
  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 1);
}

.right {
  text-align: right;
}

.left {
  text-align:left;
}

.overflow {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline;
}

.outline {
  filter: drop-shadow(1px 0 0 white) 
  drop-shadow(0 1px 0 white)
  drop-shadow(-1px 0 0 white) 
  drop-shadow(0 -1px 0 white);
}

/******* transitions & animations *******/
@keyframes fade-in {
  0% {
    opacity: .3;
  }
  100% {
    opacity: 1;
  }
}

.alpha_team {
  background-color: #1a9ee8;
}

.bravo_team {
  background-color:#c94340;
}

.link {
  cursor:pointer;
}

.link:active {
  translate: 0px 1px;
}

.icon_link {
  opacity:0.5;
  transition: opacity .4s ease-in-out;
}

.icon_link:hover {
  opacity:1.0;
}

.icon_link:active {
  translate: 0px 1px;
}

/******* form controls ********/

select {
  font-family: Roboto,sans-serif;
  height: 30px;
  line-height: 28px;
  appearance: auto;
  resize: none;
  box-sizing: border-box;
  font-size: 12px;
  width: min-content;
  color: #000;
  display: block;
  text-align: left;
  min-height: 30px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 4px;
  border: 1px solid transparent;
  background-color: #f1f3f5;
  opacity: 0.8;
}

select:disabled {
  cursor: not-allowed;
  background-color: #666;
}

.form_label {
  display: inline-block;
  font-size: 12px;
  font-weight: 500;
  color: #212529;
  word-break: break-word;
  cursor: default;
  -webkit-tap-highlight-color: transparent;
  color: #ffffff;
  text-transform: uppercase;
}
/* ... */

